--- a/react-app/ccf/src/pages/login/login.css
+++ b/react-app/ccf/src/pages/login/login.css
@@ -64,6 +64,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
   flex: 1;
   width: 50%;
   max-width: 500px;
@@ -82,7 +83,7 @@
   border-radius: 4px;
 }
 
-.login-button {
+.custom-button.login-button {
   width: 90%;
   padding: 12px;
   background-color: #BE0019;
@@ -118,11 +119,18 @@
 }
 
 .logo {
-  text-align: center;
+  display: flex;
+  justify-content: center;
   margin-bottom: 1rem;
 }
 
+.login-form .global-header {
+  text-align: center;
+}
+
 .logoImage {
+  display: block;
+  margin: 0 auto;
   max-width: 100px;
 }
 
